add css to some views, add css import to express, fix some css

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -80,6 +80,7 @@
         background-color: darkgrey;
       }
     </style>
+    <title>Dashboard</title>
   </head>
   <body>
     <div class="sidebar">
