--- a/views/userSubmitApplication.ejs
+++ b/views/userSubmitApplication.ejs
@@ -12,11 +12,10 @@
         color: #333;
         background-color: #f4f4f4;
         margin: 0;
-        padding: 20px;
         display: flex;
+        height: 100vh;
       }
       .main-content {
-        margin: 0 auto;
         margin-left: 250px;
         padding: 20px;
         width: 100%;
@@ -27,8 +26,8 @@
       }
       h1 {
         text-align: center;
-        margin-bottom: 20px;
-        font-size: 24px;
+        padding-bottom: 40px;
+        font-size: 36px;
         color: #333;
       }
       form {
@@ -68,7 +67,7 @@
         height: 100px;
       }
       .sidebar {
-        height: 100vh;
+        height: 100%;
         width: 250px;
         background-color: #333;
         color: white;
@@ -114,7 +113,7 @@
         background-color: #f1f1f1;
       }
     </style>
-    <title>Document</title>
+    <title>Submit Application</title>
   </head>
   <body>
     <div class="sidebar">
