--- a/views/adminApplicationTemplates.ejs
+++ b/views/adminApplicationTemplates.ejs
@@ -10,7 +10,6 @@
         margin: 0;
         display: flex;
       }
-
       button {
         display: inline-block;
         outline: 0;
@@ -32,7 +31,6 @@
           box-shadow: 0 0 0 0.15rem #5ceace;
         }
       }
-
       .sidebar {
         height: 100vh;
         width: 250px;
@@ -103,6 +101,7 @@
         background-color: darkgrey;
       }
     </style>
+    <title>Templates</title>
   </head>
   <body>
     <div class="sidebar">
