--- a/views/createNewTemplate.ejs
+++ b/views/createNewTemplate.ejs
@@ -45,7 +45,7 @@
         color: white;
       }
     </style>
-    <title>Document</title>
+    <title>Create Template</title>
   </head>
   <body>
     <!-- add a back button -->
