--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,14 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css"
-    />
-    <title>Document</title>
+    <link rel="stylesheet" href="/public/assets/style.css">
+    <style>
+      h1 {
+        font-size: 96px;
+      }
+    </style>
+    <title>Foodventeny Home</title>
   </head>
   <body>
-    <h1>Home</h1>
+    <h1>Foodventeny</h1>
     <a href="/login">Login</a>
   </body>
 </html>
