--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,11 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css"
-    />
-    <title>Document</title>
+    <link rel="stylesheet" href="/public/assets/style.css">
+    <title>Login</title>
   </head>
   <body>
     <h1>Login</h1>
